analysis-action/src/main/fabric8/hono-streaming-analysis-dc.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hono
    name: ${project.artifactId}
  name: ${project.artifactId}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hono
        name: ${project.artifactId}
    spec:
      containers:
      - image: eclipsehono/hono-analysis-action:${project.version}
        name: ${project.artifactId}
        ports:
        - containerPort: 8082
          name: http
          protocol: TCP
        - containerPort: 8446
          name: https
          protocol: TCP  
        livenessProbe:
          httpGet:
            path: "/status"
            port: 8082
          initialDelaySeconds: 20
