analysis-action/src/main/fabric8/hono-streaming-analysis-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hono
    name: ${project.artifactId}
  name: ${project.artifactId}
spec:
  ports:
  - name: http
    port: 8082
    protocol: TCP
    targetPort: 8082
  - name: https
    port: 8446
    protocol: TCP
    targetPort: 8446
  selector:
    name: ${project.artifactId}
